--- a/Proyecto_web/src/main/resources/application.properties
+++ b/Proyecto_web/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-server.port=80
+server.port=3090
++spring.datasource.url=jdbc:mysql://localhost/proyecto?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Kuki2021
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
