--- a/Proyecto_web/src/main/resources/application.properties
+++ b/Proyecto_web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=3090
-+spring.datasource.url=jdbc:mysql://localhost/proyecto?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/tienda?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Kuki2021
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
